--- a/docproc-bpm/pom.xml
+++ b/docproc-bpm/pom.xml
@@ -61,5 +61,10 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 </project>
