--- a/docproc-bpm/pom.xml
+++ b/docproc-bpm/pom.xml
@@ -66,5 +66,10 @@
 			<artifactId>opencsv</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 	</dependencies>
 </project>
