--- a/docproc-bpm/src/main/webapp/WEB-INF/web.xml
+++ b/docproc-bpm/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 		<init-param>
 			<!-- Application class name -->
 			<param-name>org.restlet.application</param-name>
-			<param-value>org.activiti.rest.service.application.ActivitiRestServicesApplication</param-value>
+			<param-value>be.gcroes.thesis.docproc.servlet.CustomActivitiRestApplication</param-value>
 		</init-param>
 	</servlet>
 
@@ -32,7 +32,7 @@
 		<web-resource-collection>
 			<web-resource-name>Protected Area</web-resource-name>
 			<!-- Define the context-relative URL(s) to be protected -->
-			<url-pattern>/*</url-pattern>
+			<url-pattern>/</url-pattern>
 			<!-- If you list http methods, only those methods are protected -->
 		</web-resource-collection>
 		<auth-constraint>
@@ -74,4 +74,15 @@
 	<security-role>
 		<role-name>admin</role-name>
 	</security-role>
+
+	<filter>
+    <filter-name>LoginFilter</filter-name>
+    <filter-class>
+        be.gcroes.thesis.docproc.filter.LoginFilter
+    </filter-class>
+	</filter>
+	<filter-mapping>
+    <filter-name>LoginFilter</filter-name>
+    	<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
