--- a/docproc-bpm/src/main/webapp/WEB-INF/web.xml
+++ b/docproc-bpm/src/main/webapp/WEB-INF/web.xml
@@ -63,7 +63,7 @@
 		<realm-name>LDAP realm</realm-name>
 		<form-login-config>
 			<form-login-page>/login.html</form-login-page>
-			<form-error-page>/error.html</form-error-page>
+			<form-error-page>/error.jsp</form-error-page>
 		</form-login-config>
 	</login-config>
 
@@ -88,4 +88,8 @@
     <filter-name>LoginFilter</filter-name>
     	<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
