--- a/docproc-bpm/pom.xml
+++ b/docproc-bpm/pom.xml
@@ -115,6 +115,16 @@
 			<artifactId>fest-assert-core</artifactId>
 			<version>2.0M10</version>
 		</dependency>
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>3.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 
 	</dependencies>
 </project>
