--- a/docproc-bpm/workers/csvToDataWorker/pom.xml
+++ b/docproc-bpm/workers/csvToDataWorker/pom.xml
@@ -33,7 +33,7 @@
 						</descriptorRefs>
 						<archive>
 							<manifest>
-								<mainClass>be.gcroes.thesis.docproc.worker.CsvToDataWorker</mainClass>
+								<mainClass>be.gcroes.thesis.docproc.worker.app.Main</mainClass>
 							</manifest>
 						</archive>
 						<appendAssemblyId>false</appendAssemblyId>
