--- a/docproc-bpm/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/docproc-bpm/webapp/src/main/webapp/WEB-INF/web.xml
@@ -6,21 +6,6 @@
 
 	<display-name>Docproc web</display-name>
 
-	<listener>
-		<listener-class>org.activiti.rest.common.servlet.ActivitiServletContextListener</listener-class>
-	</listener>
-	
-	<!-- Restlet adapter -->
-	<servlet>
-		<servlet-name>RestletServlet</servlet-name>
-		<servlet-class>org.restlet.ext.servlet.ServerServlet</servlet-class>
-		<init-param>
-			<!-- Application class name -->
-			<param-name>org.restlet.application</param-name>
-			<param-value>be.gcroes.thesis.docproc.rest.application.CustomActivitiRestApplication</param-value>
-		</init-param>
-	</servlet>
-
 	<servlet>
 		<servlet-name>DownloadServlet</servlet-name>
 		<servlet-class>be.gcroes.thesis.docproc.servlet.DownloadServlet</servlet-class>
@@ -33,10 +18,6 @@
 		<servlet-class>be.gcroes.thesis.docproc.servlet.AddJob</servlet-class>
 	</servlet>
 	<!-- Catch all requests -->
-	<servlet-mapping>
-		<servlet-name>RestletServlet</servlet-name>
-		<url-pattern>/service/*</url-pattern>
-	</servlet-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>DownloadServlet</servlet-name>
@@ -60,9 +41,9 @@
 			<role-name>premium</role-name>
 			<role-name>admin</role-name>
 		</auth-constraint>
-		<user-data-constraint>
-        <transport-guarantee>CONFIDENTIAL</transport-guarantee>
-    	</user-data-constraint>
+<!-- 		<user-data-constraint> -->
+<!--         <transport-guarantee>CONFIDENTIAL</transport-guarantee> -->
+<!--     	</user-data-constraint> -->
 	</security-constraint>
 
 	<security-constraint>
@@ -96,17 +77,6 @@
 	<security-role>
 		<role-name>admin</role-name>
 	</security-role>
-
-	<filter>
-    <filter-name>LoginFilter</filter-name>
-    <filter-class>
-        be.gcroes.thesis.docproc.filter.LoginFilter
-    </filter-class>
-	</filter>
-	<filter-mapping>
-    <filter-name>LoginFilter</filter-name>
-    	<url-pattern>/*</url-pattern>
-	</filter-mapping>
 	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
