--- a/docproc-bpm/workers/templateWorker/pom.xml
+++ b/docproc-bpm/workers/templateWorker/pom.xml
@@ -32,7 +32,7 @@
                         </descriptorRefs>
                         <archive>
                             <manifest>
-                                <mainClass>be.gcroes.thesis.docproc.worker.TemplateToXslWorker</mainClass>
+                                <mainClass>be.gcroes.thesis.docproc.worker.app.Main</mainClass>
                             </manifest>
                         </archive>
                         <appendAssemblyId>false</appendAssemblyId>
