--- a/docproc-bpm/workers/renderWorker/pom.xml
+++ b/docproc-bpm/workers/renderWorker/pom.xml
@@ -33,7 +33,7 @@
                         </descriptorRefs>
                         <archive>
                             <manifest>
-                                <mainClass>be.gcroes.thesis.docproc.worker.XslFoRenderWorker</mainClass>
+                                <mainClass>be.gcroes.thesis.docproc.worker.app.Main</mainClass>
                             </manifest>
                         </archive>
                         <appendAssemblyId>false</appendAssemblyId>
